# TestingFramework

./: .gitignore  CMakeLists.txt  README.md
cmake/: google-test.cmake
include/anetago/: testing.hh
src/anetago/: testing.cxx
tests/: CMakeLists.txt
tests/case/: test01.cxx
